--- a/users/.env.example
+++ b/users/.env.example
@@ -1,3 +1,3 @@
 PORT=5001
-MONGO_URL=mongodb+srv://kibb:t5ZNjdDXuzyHd5Y5@cluster0.nvrwf.mongodb.net/bunnystudio-todo-users?retryWrites=true&w=majority
-AMQ=amqps://rbxdapgi:n4p7jgw1u10LeC13HkNEFX09kBUc0hEJ@woodpecker.rmq.cloudamqp.com/rbxdapgi
+MONGO_URL=
+AMQ=
